compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/cyclicAccess.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
<!POSSIBLE_INITIALIZATION_DEADLOCK!>object A<!> {
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val a: Any = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>B.a<!><!>
}

<!POSSIBLE_INITIALIZATION_DEADLOCK!>object B<!> {
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val a: Any = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>A.a<!><!>
}
